--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <h2>CONTACT</h2>
         <p>Phone: <strong>+91 8978005269</strong></p>
         <p>Email: <a href="mailto:saidhanush1610@gmail.com">saidhanush1610@gmail.com</a></p>
-        <p>LinkedIn: <a href="https://linkedin.com/in/sai-dhanush-reddy-112068258" target="_blank">Sai Dhanush Reddy on LinkedIn</a></p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/arra-sai-dhanush-reddy-112068258/" target="_blank">Sai Dhanush Reddy on LinkedIn</a></p>
     </div>
 
     <script src="portfolio.js"></script>
